tests/invalid/bad-outputs-schema.pkl
/// Invariant 5 (publication discipline): an outputs schema whose field
/// is not a RuntimeRef is a plugin-author error caught at eval.
module tests.invalid.badOutputsSchema

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../../core/action.pkl"
import "../../core/values.pkl"
import "../support/testkit.pkl"

/// Plugin-author mistake: schema field typed String, not RuntimeRef.
class BrokenOutputs extends action.Outputs {
  digest: String
}

class BrokenAction extends testkit.TestAction {
  outputsSchema = BrokenOutputs
}

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

j: job.Job = new {
  name = "j"
  runsOn = h
  actions {
    new BrokenAction { name = "p"; requires { "bash" } }
  }
}

wf {
  name = "bad"
  resources { res }
  hosts { h }
  jobs { j }
}
